--- a/style.css
+++ b/style.css
@@ -41,6 +41,11 @@ body{
     font-size: 16px;
 }
 
+.header-content-btn{
+    font-size: 14px;
+}
+
+
 .vacancie-card{
     border-top: 2px solid #87C7EC;
 }
@@ -111,19 +116,29 @@ body{
     .fa-star, .fa-star-half{
         font-size: 40px;
     }
-    /* Section review start  */
+    /* Section review end  */
+
+    .section-solution{
+        padding-top: 40px;
+        padding-bottom: 60px;
+    }
 
     .section-contact{
         background-image: url('./assets/section-contact.png');
         background-position: left;
         background-size: cover;
         background-repeat: no-repeat;
-        padding-top: 70px;
-        padding-bottom: 70px;
+        padding-top: 40px;
+        padding-bottom: 40px;
     }
+
 
     .footer .email-icon{
         width: 25px;
+    }
+
+    .footer-copyright{
+        padding-bottom: 100px;
     }
 
     .footer-copy-link{
@@ -182,7 +197,7 @@ body{
 
      /* Team page start  */
      .team-header{
-         background-image: url('./assets/GS_Website_3_SeniorTeam_RESPONSIVE_banner.png');
+        background-image: url('./assets/GS_Website_3_SeniorTeam_RESPONSIVE_banner.png');
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
