--- a/style.css
+++ b/style.css
@@ -37,12 +37,18 @@ body{
     color: #365072;
 }
 
+.with-border{
+    border: 1px solid #ddd9d6;
+}
+
 .header-nav .nav-link{
-    font-size: 16px;
+    font-size: 17px;
 }
 
 .header-content-btn{
-    font-size: 14px;
+    font-size: 17px;
+    width: 197px;
+    height: 57px;
 }
 
 
@@ -60,15 +66,23 @@ body{
 .page-top p, 
 .page-top-social a{
     font-size: 14px;
-    font-weight: 550;
     line-height: 100%;
 }
 
 
 .page-top-social .email-icon,
 .page-top-social .linkedin-icon{
-    width: 25px;
+    width: 22px;
 }
+
+.page-top-social .email-icon {
+    height: 16px;
+}
+.page-top-social .linkedin-icon {
+    height: 22px;
+}
+
+
 
 @media only screen and (max-width: 768px) {
     .logo{
@@ -84,24 +98,48 @@ body{
     }
 
     .header-content{
-        padding: 80px 0 110px 0; 
+        padding: 90px 0 110px 0; 
     }
 
-    .with-border{
-        border: 1px solid #ddd9d6;
+     .section-problem-solver{
+        padding-top: 44px;
+        padding-bottom: 64px;
+    }
+    .section-review{
+        padding-top: 60px;
+        padding-bottom: 40px; 
+    }
+    .section-whyus{
+        padding-top: 40px;
+        padding-bottom: 60px;
+    }
+    .section-help{
+        padding-top: 58px;
+        padding-bottom: 53px;
+    }
+    .section-solution{
+        background-color: #365072;
+        padding-top: 49px;
+        padding-bottom: 107px;
+    }
+    .section-contact{
+        padding-top: 45px;
+        padding-bottom: 60px;
     }
 
     .star-icon{
-        font-size: 30px;
+        width: 45px;
+        height: 45px;
+    }
+    .star-icon-half{
+        height: 45px;
+        width: 25px;
     }
 
     .section-help img{
         width: 200px;
     }
 
-    .section-solution{
-        background-color: #365072;
-    }
 
     /* Section review start  */
     .section-review .left-quote,
@@ -110,9 +148,6 @@ body{
         line-height: 100%;
     }
 
-    .section-review-heading{
-        line-height: 100%;
-    }
     .fa-star, .fa-star-half{
         font-size: 40px;
     }
@@ -240,9 +275,51 @@ body{
 
 @media screen and (min-width: 789px){
     .logo{
-         width: 350px;
+         width: 385px;
      }
     /* Section review start  */
+    
+    /* Section review start  */
+
+
+    /* Home-page start */
+    .home-header{
+        background-image: url('./assets/GS_Website_1_Home_banner.png');
+        background-position: center;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+
+
+    .header-content{
+        padding: 129px 0 229px 0; 
+    }
+
+    .section-problem-solver{
+        padding-top: 85px;
+        padding-bottom: 50px;
+    }
+    .section-review{
+        padding-top: 85px;
+        padding-bottom: 95px; 
+    }
+    .section-whyus{
+        padding-top: 95px;
+        padding-bottom: 60px;
+    }
+    .section-help{
+        padding-top: 100px;
+        padding-bottom: 100px;
+    }
+    .section-solution{
+        padding-top: 85px;
+        padding-bottom: 85px;
+    }
+    .section-contact{
+        padding-top: 95px;
+        padding-bottom: 95px;
+    }
+
     .section-review .left-quote,
     .section-review .right-quote{
         font-family: 'Passion One', cursive;
@@ -258,42 +335,19 @@ body{
         line-height: 20%;
 
     }
-    .fa-star, .fa-star-half{
-        font-size: 40px;
-    }
-    /* Section review start  */
-
-
-    /* Home-page start */
-    .home-header{
-        background-image: url('./assets/GS_Website_1_Home_banner.png');
-        background-position: center;
-        background-size: cover;
-        background-repeat: no-repeat;
-    }
-
-    .home-header .btn{
-        width: 200px;
-    }
-
-    .header-content{
-        padding: 150px 0 200px 0; 
-    }
-    .header-content-heading{
-        line-height: 100%;
-    }
-
-    .with-border{
-        border: 1px solid #ddd9d6;
-    }
 
     .star-icon{
-        width: 30px;
-        height: 30px;
+        width: 65px;
+        height: 65px;
+    }
+
+    .star-icon-half{
+        height: 65px;
+        width: 35px;
     }
 
     .section-help img{
-        width: 200px;
+        width: 250px;
     }
 
     .section-solution{
@@ -308,8 +362,6 @@ body{
         background-position: center;
         background-size: cover;
         background-repeat: no-repeat;
-        padding-top: 100px;
-        padding-bottom: 100px;
     }
 
     .footer .email-icon{
