--- a/style.css
+++ b/style.css
@@ -188,15 +188,40 @@ body{
         background-repeat: no-repeat;
     }
 
-    
-
     .software-icon{
-        width: 50%;
+        width: 170px;
     }
     
     .btn-book-call{
         width: 100%;
     }
+
+     .whatwedo-section-1{
+        padding-top: 72px;
+        padding-bottom: 54px;
+    }
+
+    .whatwedo-section-2{
+        padding-top: 62px;
+        padding-bottom: 52px;
+    }
+
+    .whatwedo-section-3{
+        padding-top: 41px;
+        padding-bottom: 50px;
+    }
+
+    .whatwedo-section-4{
+        padding-top: 35px;
+        padding-bottom: 58px;
+    }
+
+    .whatwedo-section-5{
+        padding-top: 42px;
+        padding-bottom: 58px;
+    }
+
+
     /* What we do page end*/
 
     /* why us page start */
@@ -383,20 +408,46 @@ body{
     }
 
     .card{
-        height: 400px;
+        height: 370px;
     }
 
     .card-img-top{
         width: 70%;
-        margin: 35px auto;
+        margin: 35px auto 0 auto;
         height: 200px;
     }
     
     .software-icon{
-        width: 250px;
-        height: 250px;
+        width: 267px;
+        height: 268px;
 
     }
+
+    .whatwedo-section-1{
+        padding-top: 98px;
+        padding-bottom: 114px;
+    }
+
+    .whatwedo-section-2{
+        padding-top: 84px;
+        padding-bottom: 102px;
+    }
+
+    .whatwedo-section-3{
+        padding-top: 68px;
+        padding-bottom: 110px;
+    }
+
+    .whatwedo-section-4{
+        padding-top: 68px;
+        padding-bottom: 111px;
+    }
+
+    .whatwedo-section-5{
+        padding-top: 80px;
+        padding-bottom: 94px;
+    }
+
     /* What we do page end*/
 
     /* About page start  */
