--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 }
 
 .bg-light-grey{
-    background-color: #ddd9d6;
+    background-color: #E5E2DF;
 }
 
 .bg-light-blue{
@@ -37,8 +37,16 @@ body{
     color: #365072;
 }
 
-.with-border{
+.border-grey{
     border: 1px solid #ddd9d6;
+}
+
+.border-blue{
+    border: 1px solid #243F60;
+}
+
+.btn{
+    font-size: 17px;
 }
 
 .header-nav .nav-link{
@@ -140,6 +148,13 @@ body{
         width: 200px;
     }
 
+    .section-hep-title{
+        font-size: 29px;
+    }
+
+    .section-help-heading{
+        font-size: 22px;
+    }
 
     /* Section review start  */
     .section-review .left-quote,
@@ -332,6 +347,11 @@ body{
         padding-top: 95px;
         padding-bottom: 60px;
     }
+
+    .btn-whyus{
+        font-size: 20px;
+    }
+
     .section-help{
         padding-top: 100px;
         padding-bottom: 100px;
@@ -373,6 +393,14 @@ body{
 
     .section-help img{
         width: 250px;
+    }
+
+    .section-hep-title{
+        font-size: 40px;
+    }
+
+    .section-help-heading{
+        font-size: 34px;
     }
 
     .section-solution{
