--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ p{
     font-weight: 500;
 }
 
+
 .header-nav .nav-link{
     font-size: 17px;
 }
@@ -90,6 +91,11 @@ p{
     height: 22px;
 }
 
+.footer-copyright p{
+    font-size: 20px;
+    font-weight: 400;
+}
+
 
 .home-header,
 .whatwedo-header,
@@ -120,6 +126,7 @@ p{
 .contact-page-form input{
     height: 96px;
 }
+
 
 
 @media only screen and (max-width: 768px) {
